# bloomfilter-repro

./: .gitignore  .gitmodules  BENCHMARK.md  CMakeLists.txt  LICENSE  README.md
benchmarks/: filters.hpp  get_cache_size.cpp  n_filter.cpp  random.h  skyline.cpp  util.hpp
benchmarks/filter/: api.hpp  blocked_bloom_impala.hpp  blocked_bloom_multiword.hpp  blocked_cuckoo.hpp  bloom.hpp  bloom_columbia.hpp  cuckoo_fan.hpp  cuckoofilter.hpp  dynamic_blocked_bloom.hpp
scripts/: aggr_results.sh  benchmark.sh  determine_arch.sh  summary.sh
src/: bettertable.h  bettertable_counting.h  bitsutil.h  cuckoofilter.h  hashutil.h  simd-block.h  singletable.h  vbf.cpp  vbf.hpp  vectorized_bloomfilter_columbia.c
tex/: plot_skyline_bbf_config.tex  plot_skyline_cf_config.tex  plot_skyline_overview.tex  summary.tex
